manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aspnetapp
  name: aspnet-deployment
  namespace: otus
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: aspnetapp
  template:
    metadata:
      labels:
        app: aspnetapp
    spec:
      containers:
      - image: danmer1tomsk/otus:aspnet_testapp_v1.0.0 
        imagePullPolicy: "Always"
        name: aspnetapp-container
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /healthCheck
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 10
