manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnetapp-service
  namespace: otus
spec:
  type: LoadBalancer
  selector:
    app: aspnetapp
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8000
